wisehands/shop/css/shop.css
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

.productDescriptionTruncate {
    line-height: 1.5em;
    max-height: 3em;
    overflow: hidden;
    text-overflow: ellipsis;
    position: relative;
    text-align: justify;
    margin-right: -1em;
    padding-right: 1em;
}
.productDescriptionTruncate:before {
    content: '...';
    position: absolute;
    right: 0;
    bottom: 0;
}
.productDescriptionTruncate:after {
    content: '';
    position: absolute;
    right: 0;
    width: 1em;
    height: 1em;
    margin-top: 0.2em;
    background: white;
}

.headerCentering:before {
    content: "";
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

.removeAllRedIcon {
    color: red;
}
.inputTextCentering {
    text-align: center;
}
.modalPosition {
    float: none;
}

body.modal-open {
    overflow: hidden;
}
.floatLeft {
    float: left;
}

.cardPadding {
    padding-right: 0;
    padding-left: 0;
}

.productTooltip {
    color: #000;
}

.minHeight {
    min-height: 4.5em;
}

.priceAlignment {
    margin-top: 0.7em;
}

.proceedWithPayment {
    display: none;
}

.buyButtonBotMargin {
    margin-bottom: .5em;
}

